force-app/main/default/objects/Barbecue_Budget__c/Barbecue_Budget__c.object-meta.xml
<CustomObject>
    <label>Presupuesto Asado</label>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Presupuestos Asados</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>