force-app/main/default/objects/Barbecue_Budget__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo de relación Lookup con el objeto Contacto. Se utiliza para asociar un presupuesto de asado a un cliente específico.</description>
    <inlineHelpText>Seleccione el cliente al que pertenece este presupuesto. Si el cliente no está definido, puede dejar este campo vacío.</inlineHelpText>
    <label>Cliente</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Presupuesto Asados</relationshipLabel>
    <relationshipName>Presupuesto_Asados</relationshipName>
    <type>Lookup</type>
</CustomField>