force-app/main/default/objects/Barbecue_Budget__c/fields/End__c.field-meta.xml
<CustomField>
    <fullName>End__c</fullName>
    <description>Representa la fecha y hora de finalización del presupuesto del asado.</description>
    <inlineHelpText>Ingrese la fecha y hora en que finaliza el presupuesto del asado.</inlineHelpText>
    <label>Fin</label>
    <type>DateTime</type>
</CustomField>