force-app/main/default/objects/Barbecue_Budget__c/fields/Start__c.field-meta.xml
<CustomField>
    <fullName>Start__c</fullName>
    <description>Representa la fecha y hora de inicio del presupuesto del asado.</description>
    <inlineHelpText>Ingrese la fecha y hora en que inicia el presupuesto de asado.</inlineHelpText>
    <label>Inicio</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>