force-app/main/default/objects/Barbecue_Budget__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&quot;Nuevo&quot;</defaultValue>
    <description>Representa el estado del presupuesto de asado. Se actualiza automáticamente según el flujo del proceso.</description>
    <inlineHelpText>Seleccione el estado actual del presupuesto.</inlineHelpText>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nuevo</fullName>
            </value>
            <value>
                <fullName>En curso de aprobación</fullName>
            </value>
            <value>
                <fullName>Programado</fullName>
            </value>
            <value>
                <fullName>Completado</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>