force-app/main/default/objects/Barbecue_Budget__c/fields/Total_value__c.field-meta.xml
<CustomField>
    <fullName>Total_value__c</fullName>
    <description>Calcula la suma total de los valores de las partidas presupuestarias asociadas a este presupuesto.</description>
    <inlineHelpText>Muestra el valor total calculado de las partidas presupuestarias asociadas.</inlineHelpText>
    <label>Valor total</label>
    <summarizedField>Budget_item__c.Item_value__c</summarizedField>
    <summaryForeignKey>Budget_item__c.Barbecue_Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>