force-app/main/default/objects/Barbecue_Budget__c/validationRules/Validar_CPF_Presupuesto.validationRule-meta.xml
<ValidationRule>
    <fullName>Validar_CPF_Presupuesto</fullName>
    <active>true</active>
    <description>Regla para validar que  CPF esté lleno al solicitar un presupuesto para un asado, sino no es posible solicitarlo.</description>
    <errorConditionFormula>ISBLANK(Customer__r.CPF__c)</errorConditionFormula>
    <errorDisplayField>Customer__c</errorDisplayField>
    <errorMessage>El cliente debe tener un CPF para solicitar un presupuesto para un asado.</errorMessage>
</ValidationRule>