force-app/main/default/objects/Barbecue_Budget__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Status__c</columns>
    <columns>Start__c</columns>
    <columns>End__c</columns>
    <columns>Total_value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>